--- a/nbp-service/composer.json
+++ b/nbp-service/composer.json
@@ -27,7 +27,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Services/wgaw/my_functions.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
